tests/tooling/fixtures/native/recovery/negative/negative_switch_return_missing_default.objc3
// Negative fixture: switch without default does not guarantee non-void return paths.
// Expected diagnostic code(s): O3S205.
module NegativeSwitchReturnMissingDefault;

fn main() -> i32 {
  let value = 2;
  switch (value) {
    case 1:
      return 11;
    case 2:
      return 42;
  }
}